--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap');
 
+:root{
+    color: #ffffff;
+}
+
+*. *::after, *::before{
+    box-sizing: border-box;
+}
+
 *{
     font-family: "Montserrat", sans-serif;
     margin: 0;
@@ -7,6 +15,8 @@
     box-sizing: border-box;
     background-color: #24252A;
     scroll-behavior: smooth;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 /*nav bar*/
