profile social media

--- a/css/profile.css
+++ b/css/profile.css
@@ -1,4 +1,4 @@
-.profile{
+.one_profile{
     display: block;
     width: 15.00%;
     float: left;
@@ -7,4 +7,8 @@
 .profie_div {
     margin-left: 15px;
     margin-right: 15px;
+}
+
+.cb{
+    clear:both;
 }
