--- a/css/base.css
+++ b/css/base.css
@@ -19,6 +19,7 @@
     margin-right: 15px;
 }
 
+/*-----------------------Header CSS-----------------------*/
 /*nav bar*/
 header{
     display: flex;
@@ -36,10 +37,18 @@ header{
     padding: 0px 20px;
 }
 
-.nav_links li a{
-    transition: all 0.3s ease 0s;
+nav_color{
+    font-weight: 500;
+    font-size: 16px;
+    color: #edf0f1;
+    text-decoration: none;
 }
 
-.nav_links li a:hover{
+.nav_links li nav_color{
+    transition: all 0.9s ease 0s;
+}
+
+.nav_links li nav_color:hover{
     color: #0088a9;
 }
+
