--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,7 @@
     box-sizing: border-box;
 }
 
-/*-----------------------Header CSS-----------------------*/
-a{
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
-}
+
 
 /*about me*/
 .about_me{
@@ -126,13 +120,23 @@ a{
 }
 
 /* x */
-.message_box .mb_close{
+.message_box{
     cursor: pointer;
     border: none;
     outline: none;
     background: none;
     font-size: 1.25rem;
     font-weight: bold;
+}
+
+.mb_close{
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align:right;
 }
 
 .input{
